# -LIFPROJET-L3-Capture-et-transfert-d-animation-d-un-visage

./: .gitignore  README.md  installation.sh  launchTraining.sh  launcher.sh  links.sh  ui.sh
Neural network training/: happyNetwork60ls  happy_network.py  test_keras.py
data/: debug.txt
src/: CMakeLists.txt  drawLandmarks.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ui_mainwindow.h  worker.cpp  worker.h
src/structs/: pixel.h
src/train/: trainer.cpp  trainer.h
tmp/: links.txt
